# error_log_agent_v2

./: .env.example  .gitignore  Dockerfile  Dockerfile.compose  config.compose.yaml  config.yaml  docker-compose.yml  pyproject.toml
docs/: quickstart.md  user-guide.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  ErrorDetail.jsx  ErrorList.jsx  FixHistory.jsx  Login.jsx  Register.jsx  ServiceDetail.jsx  Services.jsx
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  secret.yaml  service.yaml
plan/: PROGRESS.md  enhancement-plan-v2.md  service-ownership-spec.md
scripts/: init-db.sql
src/agent/: edges.py  graph.py  middleware.py  state.py
src/auth/: deps.py  manager.py  routes.py  schemas.py
src/config/: logging_config.py  settings.py
src/db/: manager.py
src/deployer/: production.py  rollback.py  staging.py
src/log_collector/: file_collector.py  filter.py  k8s_collector.py  parser.py
src/models/: analysis_result.py  deployment.py  fix_plan.py  log_entry.py
src/server/: app.py  routes.py  scheduler.py
src/slack/: bot.py  handlers.py  message_builder.py
src/tools/: file_system.py  k8s_ops.py  web_search.py
target-source/: Dockerfile.compose  config.compose.yaml
tests/: test_auth.py  test_file_collector.py  test_middleware.py  test_parser.py  test_service_ownership.py  test_ssh_integration.py  test_tools.py
(+13 files in other folders)
